2005-07-24 09:03  PeterB

	* configure.in, src/save-restore.c, src/threads.h,
	libbalsa/address-book-extern.c, libbalsa/libbalsa.c,
	libbalsa/mailbox_imap.c, libbalsa/mailbox_mbox.c,
	libbalsa/mailbox_mh.c, libbalsa/send.c, libbalsa/send.h,
	libbalsa/imap/imap-commands.c, libbalsa/imap/imap-handle.c: compile
	with -D_FORTIFY_SOURCE=2.
	* src/balsa-mime-widget-message.c: do not create separate Fcc
	header.
	* libbalsa/message.c: make a single References user-header.
	* libbalsa/abook-completion.c: match quoted names and
	angle-bracketed mailboxes.

2005-07-23  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-07-18 08:04  PeterB

	* src/sendmsg-window.c: make References header according to RFC
	2822.

2005-07-15 10:53  PeterB

	* src/sendmsg-window.c: replace CR and LF in subject header with
	spaces.

2005-07-12 13:32  PeterB

	* src/save-restore.c: fix typo; clean up old filters correctly.
	* src/filter-edit-dialog.c: set button sensitivity when filter name
	is changed.
	* libbalsa/: libbalsa-conf.c, libbalsa-conf.h: use default GKeyFile
	list separator; implement libbalsa_conf_get_vector_with_default
	directly instead of as a macro.

2005-07-11 12:32  PeterB

	* src/store-address.c: use balsa_information instead of writing in
	appbar.
	* src/spell-check.c: use values from correct enum.
	* src/mailbox-node.c: use consistent return sequence.
	* src/: filter-edit-callbacks.c, filter-edit-dialog.c,
	filter-edit.h: use a single field-frame.

2005-07-09 23:33  PeterB

	* src/information-dialog.c: use only single-line messages in status
	bar.

2005-07-08 Pawel Salek

	* configure.in: -Wdeclare-after-statement is gcc>=4.0 specific.

2005-07-07 23:27  PeterB

	* src/balsa-index.c: lock a GMimeStream.
	* src/: save-restore.c, save-restore.h: export
	config_address_books_load.
	* src/mailbox-node.c: downgrade scanning problem from error to
	warning.
	* src/balsa-app.c: clean up.